--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   },
